# libppm

./: .gitignore  Cargo.toml  README.md  grayscales  read_file  testPython.py  transformations
benches/: execution-time.rs
examples/: grayscales.rs  read_file.rs  testPython.py  transformations.rs
images/input/P3/: custom.ascii.ppm
src/: lib.rs  main.rs  pixel.rs
tests/: pixel.rs
