[package]
name = "ppm"
version = "0.1.0"
authors = [
    "Clément Delaunay",
    "Mathias Gianotti",
    "Cécile Cousin",
    "Clément Depraz"
]
edition = "2018"

[lib]
name = "ppm"
crate-type = ["rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
c_string = "0.7.0"
colored = "1.9"